Restore 2.7 lane and added final changes

--- a/.github/workflows/ui-rm_head_2.7.yaml
+++ b/.github/workflows/ui-rm_head_2.7.yaml
@@ -1,5 +1,5 @@
 # This workflow calls the master E2E workflow with custom variables
-name: UI-RM_head_upgrade
+name: UI-RM_head_2.7
 run-name: ${{ github.event_name == 'workflow_dispatch' && format('`{0}` on `{1}` - `{2}` destroy={3}', inputs.rancher_version, inputs.upstream_cluster_version, inputs.grep_test_by_tag, inputs.destroy_runner) || github.workflow }}
 
 on:
@@ -13,41 +13,21 @@ on:
         description: Destroy the auto-generated self-hosted runner
         default: true
         type: boolean
-      upgrade:
-        description: Proceed with Rancher Upgrade (True/False)
-        default: false
-        required: true
-        type: boolean
       rancher_version:
-        description: Rancher version channel/version/head_version latest/latest, latest/2.y.x[-rc1], prime/2.y.x, prime/devel/2.y, alpha/2.y.0-alphaZ
-        default: latest/devel/2.10
+        description: Rancher version channel/version/head_version latest/latest, latest/2.7.10[-rc2], prime/2.7.12, prime/devel/2.7, prime-optimus/2.7.13-rc4
+        default: latest/devel/2.7
         type: string
         required: true
-      rancher_upgrade:
-        description: Rancher Manager channel/version to upgrade to
-        default: latest/devel/head
-        required: true
-        type: string
       upstream_cluster_version:
         description: K3s upstream cluster version where to install Rancher
-        default: v1.28.8+k3s1
+        default: v1.26.10+k3s2
         type: string
         required: true
-      k8s_version_upgrade_ds_cluster:
-        description: Proceed with K8s version Upgrade (True/False)
-        default: false
-        required: false
-        type: boolean
-      k8s_version_to_upgrade_ds_cluster_to:
-        description: K3s version to be upgraded on cluster. Provide version when k8s upgrade option is checked.
-        required: false
-        type: string
       grep_test_by_tag:
-        description: Grep tags. For multiple selection separate with spaces. Keep always @login.
-          Use @k8sUpgrade to test K8s version upgrade on imported clusters.
+        description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
-        default: '@login @upgrade'
+        default: '@login @p0 @p1 @rbac'
 
 jobs:
   ui:
@@ -70,10 +50,9 @@ jobs:
     with:
       test_description: "CI/Manual - UI - Deployment test with Standard K3s"
       cluster_name: cluster-k3s
+      # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
       destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
-      upstream_cluster_version: ${{ inputs.upstream_cluster_version }}
-      rancher_version: ${{ inputs.rancher_version }}
-      rancher_upgrade: ${{ inputs.rancher_upgrade }}
-      upgrade: ${{ inputs.upgrade }}
-      qase_run_id: ${{ inputs.qase_run_id }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag }}
+      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.26.10+k3s2' }}
+      rancher_version: ${{ inputs.rancher_version || 'latest/devel/2.7' }}
+      qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @rbac' }}
