--- a/.github/workflows/ui-rm_head.yaml
+++ b/.github/workflows/ui-rm_head.yaml
@@ -15,12 +15,12 @@ on:
         type: boolean
       rancher_version:
         description: Rancher version channel/version/head_version latest/latest, latest/2.11.x[-rc1], prime/2.11.x, prime/devel/2.11, alpha/2.11.0-alpha1
-        default: latest/2.12.0-rc1
+        default: head/2.12
         type: string
         required: true
       upstream_cluster_version:
         description: K3s upstream cluster version where to install Rancher
-        default: 'v1.32.4+k3s1'
+        default: 'v1.33.2+k3s1'
         type: string
         required: true
       grep_test_by_tag:
@@ -54,7 +54,7 @@ jobs:
       cluster_name: cluster-k3s
       # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
       destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
-      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.32.4+k3s1' }}
-      rancher_version: ${{ inputs.rancher_version || 'latest/2.12.0-rc1' }}
+      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.33.2+k3s1' }}
+      rancher_version: ${{ inputs.rancher_version || 'head/2.12' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
       grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @rbac' }}
