--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -79,6 +79,9 @@ on:
       rancher_upgrade:
         description: Rancher Manager channel/version to upgrade to
         type: string
+      upgrade_branch:
+        description: Use separate branch for Rancher 2.12 after upgrade Rancher from 2.11
+        type: string
       grep_test_by_tag:
         description: Grep tags. For multiple selection separate with spaces
         required: false
@@ -387,10 +390,10 @@ jobs:
           echo "fleet_app_upgraded_version=${FLEET_APP_UPGRADED_VERSION}" >> ${GITHUB_OUTPUT}
           echo "fleet_images_after_upgrade=${FLEET_UPGRADED_IMAGES}" >> ${GITHUB_OUTPUT}
       - name: Checkout (After Upgrade)
-        if: ${{ inputs.branch }}
+        if: ${{ inputs.upgrade_branch }}
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.branch }}
+          ref: ${{ inputs.upgrade_branch }}
       - name: Cypress tests - On Upgraded Rancher
         id: cypress_result_after_rancher_upgrade
         if: ${{ inputs.rancher_upgrade != '' }}
