--- a/.github/workflows/ui-rm_head_upgrade.yaml
+++ b/.github/workflows/ui-rm_head_upgrade.yaml
@@ -28,7 +28,7 @@ on:
         default: latest/devel/head
         required: true
         type: string
-      branch:
+      upgrade_branch:
         description: Use this branch '2.12-stable' when upgrading to 2.12. Default is empty
         required: false
         default: ''
@@ -82,4 +82,4 @@ jobs:
       upgrade: ${{ inputs.upgrade }}
       qase_run_id: ${{ inputs.qase_run_id }}
       grep_test_by_tag: ${{ inputs.grep_test_by_tag }}
-      branch: ${{ inputs.branch }}
+      upgrade_branch: ${{ inputs.upgrade_branch }}
