--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -389,11 +389,11 @@ jobs:
           echo "rm_upgraded_version=${RM_UPGRADED_VERSION}" >> ${GITHUB_OUTPUT}
           echo "fleet_app_upgraded_version=${FLEET_APP_UPGRADED_VERSION}" >> ${GITHUB_OUTPUT}
           echo "fleet_images_after_upgrade=${FLEET_UPGRADED_IMAGES}" >> ${GITHUB_OUTPUT}
-      - name: Checkout (After Upgrade)
+      - name: Checkout to upgrade branch
         if: ${{ inputs.upgrade_branch }}
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.upgrade_branch }}
+        run: |
+          git fetch origin ${{ inputs.upgrade_branch }}
+          git checkout ${{ inputs.upgrade_branch }}
       - name: Cypress tests - On Upgraded Rancher
         id: cypress_result_after_rancher_upgrade
         if: ${{ inputs.rancher_upgrade != '' }}
