--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -274,10 +274,10 @@ jobs:
           PUBLIC_DOMAIN: bc.googleusercontent.com
           RANCHER_PASSWORD: ${{ secrets.rancher_password }}
         run: |
-          if ${{ inputs.hardening == 'true' }} then
+          if [ "${{ inputs.hardening }}" = "true" ]; then
             cd tests && make install-rke2-hardened-rancher
           else
-              cd tests && make e2e-install-rancher
+            cd tests && make e2e-install-rancher
           fi
       - name: Extract component versions/informations
         id: component
