--- a/tests/Makefile
+++ b/tests/Makefile
@@ -14,11 +14,14 @@ publish-qase-run: deps
 e2e-install-rancher: deps
 	ginkgo --label-filter install -r -v ./e2e
 
+e2e-no-k3s-install-test-rancher:
+	@./scripts/certs-and-rancher-install.sh
+
 e2e-upgrade-rancher-manager: deps
 	ginkgo --label-filter upgrade-rancher-manager -r -v ./e2e
 
 start-cypress-tests:
 	@./scripts/start-cypress-tests
 
-e2e-install-rke2-hardened-rancher:
+e2e-install-rke2-hardened-cluster:
 	@./scripts/provision-rke2-hardened.sh
