--- a/.github/workflows/ui-rm-hardening.yaml
+++ b/.github/workflows/ui-rm-hardening.yaml
@@ -56,9 +56,9 @@ jobs:
       test_description: "CI/Manual - UI - Deployment test with hardened rke2 cluster"
       cluster_name: hardened-rke2-cluster
       # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
-      destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
-      upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.32.4+k3s1' }}
-      rancher_version: ${{ inputs.rancher_version || 'head/2.12' }}
-      qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
+      destroy_runner: ${{ inputs.destroy_runner }}
+      upstream_cluster_version: ${{ inputs.upstream_cluster_version }}
+      rancher_version: ${{ inputs.rancher_version }}
+      qase_run_id: ${{ inputs.qase_run_id }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag }}
       hardening: ${{ inputs.hardening }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login' }}
