--- a/.github/workflows/ui-rm_head_2.12.yaml
+++ b/.github/workflows/ui-rm_head_2.12.yaml
@@ -1,5 +1,5 @@
 # This workflow calls the master E2E workflow with custom variables
-name: UI-RM_head
+name: UI-RM_head_2.12
 run-name: ${{ github.event_name == 'workflow_dispatch' && format('`{0}` on `{1}` - `{2}` destroy={3}', inputs.rancher_version, inputs.upstream_cluster_version, inputs.grep_test_by_tag, inputs.destroy_runner) || github.workflow }}
 
 on:
@@ -15,7 +15,7 @@ on:
         type: boolean
       rancher_version:
         description: Rancher version channel/version/head_version latest/latest, latest/2.11.x[-rc1], prime/2.11.x, prime/devel/2.11, alpha/2.11.0-alpha1
-        default: head/2.13
+        default: head/2.12
         type: string
         required: true
       upstream_cluster_version:
@@ -29,7 +29,7 @@ on:
         type: string
         default: '@login @p0 @p1 @p1_2 @rbac'
   schedule:
-    - cron: '30 2 * * *'
+    - cron: '40 3 * * *'
 
 jobs:
   ui:
@@ -55,6 +55,6 @@ jobs:
       # WARNING, VALUES BELOW ARE HARDCODED FOR RUNS SCHEDULED BY CRON
       destroy_runner: ${{ github.event_name == 'schedule' && true || inputs.destroy_runner }}
       upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.33.2+k3s1' }}
-      rancher_version: ${{ inputs.rancher_version || 'head/2.13' }}
+      rancher_version: ${{ inputs.rancher_version || 'head/2.12' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
       grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @rbac' }}
