--- a/.github/workflows/ui-rm_head_2.12.yaml
+++ b/.github/workflows/ui-rm_head_2.12.yaml
@@ -49,6 +49,8 @@ jobs:
       rsa_private_key_qa: ${{ secrets.RSA_PRIVATE_KEY_QA }}
       rsa_public_key_qa: ${{ secrets.RSA_PUBLIC_KEY_QA }}
       qase_api_token: ${{ secrets.QASE_API_TOKEN }}
+      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     with:
       test_description: "CI/Manual - UI - Deployment test with Standard K3s"
       cluster_name: cluster-k3s
