Split cluster group related tests to another file

--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -361,6 +361,7 @@ jobs:
             cypress/e2e/unit_tests/upgrade_fleet.spec.ts
             cypress/e2e/unit_tests/hardened_fleet.spec.ts
             cypress/e2e/unit_tests/special_fleet_tests.spec.ts
+            cypress/e2e/unit_tests/p1_2_cg_long_fleet.spec.ts
         run: |
           if ${{ inputs.qase_run_id == 'none' }}; then
             # Unset default QASE_* variables when reporting is disabled
