--- a/.github/workflows/master-e2e.yaml
+++ b/.github/workflows/master-e2e.yaml
@@ -357,6 +357,7 @@ jobs:
             cypress/e2e/unit_tests/p0_fleet.spec.ts
             cypress/e2e/unit_tests/p1_fleet.spec.ts
             cypress/e2e/unit_tests/p1_2_fleet.spec.ts
+            cypress/e2e/unit_tests/p1_3_fleet.spec.ts
             cypress/e2e/unit_tests/rbac_fleet.spec.ts
             cypress/e2e/unit_tests/upgrade_fleet.spec.ts
             cypress/e2e/unit_tests/hardened_fleet.spec.ts
