--- a/.github/workflows/ui-rm_head.yaml
+++ b/.github/workflows/ui-rm_head.yaml
@@ -27,7 +27,7 @@ on:
         description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
-        default: '@login @p0 @p1 @p1_2 @rbac @special_tests'
+        default: '@login @p0 @p1 @p1_2 @p1_3 @rbac @special_tests'
   schedule:
     - cron: '30 2 * * *'
 
@@ -62,4 +62,4 @@ jobs:
       upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.33.2+k3s1' }}
       rancher_version: ${{ inputs.rancher_version || 'head/2.13' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @rbac @special_tests' }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @p1_3 @rbac @special_tests' }}
