--- a/.github/workflows/ui-rm_head_2.9.yaml
+++ b/.github/workflows/ui-rm_head_2.9.yaml
@@ -31,7 +31,7 @@ on:
         description: Grep tags. For multiple selection separate with spaces. Keep always @login
         required: false
         type: string
-        default: '@login @p0 @p1 @p1_2 @rbac'
+        default: '@login @p0 @p1 @p1_2 @p1_3 @rbac'
   schedule:
     - cron: '0 3 * * 0'
 
@@ -61,5 +61,5 @@ jobs:
       upstream_cluster_version: ${{ inputs.upstream_cluster_version || 'v1.29.12+k3s1' }}
       rancher_version: ${{ inputs.rancher_version || 'latest/devel/2.9' }}
       qase_run_id: ${{ inputs.qase_run_id || 'auto' }}
-      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @rbac' }}
+      grep_test_by_tag: ${{ inputs.grep_test_by_tag || '@login @p0 @p1 @p1_2 @p1_3 @rbac' }}
       branch: ${{ inputs.branch || '2.10-stable' }}
