--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,12 +4,12 @@ deps:
 	@go mod tidy
 
 # Qase commands
-create-qase-run: deps
-	@go run qase/qase_cmd.go -create
-delete-qase-run: deps
-	@go run qase/qase_cmd.go -delete
-publish-qase-run: deps
-	@go run qase/qase_cmd.go -publish
+# create-qase-run: deps
+# 	@go run qase/qase_cmd.go -create
+# delete-qase-run: deps
+# 	@go run qase/qase_cmd.go -delete
+# publish-qase-run: deps
+# 	@go run qase/qase_cmd.go -publish
 
 e2e-install-rancher: deps
 	ginkgo --label-filter install -r -v ./e2e
