--- a/.github/workflows/ui-rm_head_2.10.yaml
+++ b/.github/workflows/ui-rm_head_2.10.yaml
@@ -33,7 +33,7 @@ on:
         type: string
         default: '@login @p0 @p1 @p1_2 @rbac'
   schedule:
-    - cron: '30 5 * * *'
+    - cron: '0 5 * * 0'
 
 jobs:
   ui:
